--- a/index.html
+++ b/index.html
@@ -1,125 +1,143 @@
-<h2><strong>Quizia Application Overview</strong></h2>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Quizia Application Overview</title>
+  <!-- Tailwind CSS CDN -->
+  <script src="https://cdn.tailwindcss.com"></script>
+  <!-- DaisyUI CDN -->
+  <script src="https://cdn.jsdelivr.net/npm/daisyui@2.25.0/dist/full.js"></script>
+</head>
+<body class="bg-gray-100 text-gray-800">
 
-<p>Quizia is a quiz application created by Louay Bousaadi, an IT student. The app is built using Flutter and fetches quiz questions from the <a href="https://opentdb.com/">Open Trivia Database API</a>.</p>
+  <div class="container mx-auto p-4">
 
-<hr>
+    <h2 class="text-3xl font-bold mb-4">Quizia Application Overview</h2>
 
-<h3><strong>Onboarding Page</strong></h3>
-<p>The onboarding process introduces users to the application with a series of engaging visuals:</p>
-<div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(150px, 1fr)); gap: 10px;">
-  <img src="https://github.com/xloyb/Quizia-Application/blob/main/images/1.jpg?raw=true" alt="Image 1" style="width: 100%; border-radius: 8px;" />
-  <img src="https://github.com/xloyb/Quizia-Application/blob/main/images/2.jpg?raw=true" alt="Image 2" style="width: 100%; border-radius: 8px;" />
-  <img src="https://github.com/xloyb/Quizia-Application/blob/main/images/3.jpg?raw=true" alt="Image 3" style="width: 100%; border-radius: 8px;" />
-</div>
+    <p class="mb-4">Quizia is a quiz application created by Louay Bousaadi, an IT student. The app is built using Flutter and fetches quiz questions from the <a href="https://opentdb.com/" class="text-blue-500">Open Trivia Database API</a>.</p>
 
-<hr>
+    <hr class="my-4">
 
-<h3><strong>Login and Registration</strong></h3>
-<p>The application features a login and registration system with the following functionalities:</p>
-<ul>
-  <li><strong>Registration Page</strong>: Includes a check to verify if the user already exists.</li>
-</ul>
-<div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(150px, 1fr)); gap: 10px;">
-  <img src="https://github.com/xloyb/Quizia-Application/blob/main/images/4.jpg?raw=true" alt="Image 4" style="width: 100%; border-radius: 8px;" />
-  <img src="https://github.com/xloyb/Quizia-Application/blob/main/images/5.jpg?raw=true" alt="Image 5" style="width: 100%; border-radius: 8px;" />
-</div>
+    <h3 class="text-2xl font-semibold mb-2">Onboarding Page</h3>
+    <p class="mb-4">The onboarding process introduces users to the application with a series of engaging visuals:</p>
+    <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-4">
+      <img src="https://github.com/xloyb/Quizia-Application/blob/main/images/1.jpg?raw=true" alt="Image 1" class="w-full rounded-lg"/>
+      <img src="https://github.com/xloyb/Quizia-Application/blob/main/images/2.jpg?raw=true" alt="Image 2" class="w-full rounded-lg"/>
+      <img src="https://github.com/xloyb/Quizia-Application/blob/main/images/3.jpg?raw=true" alt="Image 3" class="w-full rounded-lg"/>
+    </div>
 
-<hr>
+    <hr class="my-4">
 
-<h3><strong>Terms of Service (TOS)</strong></h3>
-<p>To comply with Play Store requirements, the app provides a detailed Terms of Service page.</p>
-
-<hr>
-
-<h3><strong>Homepage</strong></h3>
-<p>After successfully registering or logging in, users are redirected to the homepage. Here, users can view:</p>
-<ul>
-  <li><strong>Account Stats</strong>:
-    <ul>
-      <li>Total quizzes taken.</li>
-      <li>Last quiz score.</li>
+    <h3 class="text-2xl font-semibold mb-2">Login and Registration</h3>
+    <p class="mb-4">The application features a login and registration system with the following functionalities:</p>
+    <ul class="list-disc ml-6 mb-4">
+      <li><strong>Registration Page</strong>: Includes a check to verify if the user already exists.</li>
     </ul>
-  </li>
-</ul>
-<div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(150px, 1fr)); gap: 10px;">
-  <img src="https://github.com/xloyb/Quizia-Application/blob/main/images/7.jpg?raw=true" alt="Homepage" style="width: 100%; max-width: 200px; border-radius: 8px;" />
-</div>
+    <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-4">
+      <img src="https://github.com/xloyb/Quizia-Application/blob/main/images/4.jpg?raw=true" alt="Image 4" class="w-full rounded-lg"/>
+      <img src="https://github.com/xloyb/Quizia-Application/blob/main/images/5.jpg?raw=true" alt="Image 5" class="w-full rounded-lg"/>
+    </div>
 
-<p>The app also features a convenient navigation drawer.</p>
-<div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(150px, 1fr)); gap: 10px;">
-  <img src="https://github.com/xloyb/Quizia-Application/blob/main/images/13.jpg?raw=true" alt="Navigation Drawer" style="width: 100%; max-width: 200px; border-radius: 8px;" />
-</div>
+    <hr class="my-4">
 
-<hr>
+    <h3 class="text-2xl font-semibold mb-2">Terms of Service (TOS)</h3>
+    <p class="mb-4">To comply with Play Store requirements, the app provides a detailed Terms of Service page.</p>
 
-<hr>
+    <hr class="my-4">
 
-<h3><strong>Quiz Features</strong></h3>
-<p>Users can start quizzes in two ways:</p>
-<ol>
-  <li><strong>Category Selection</strong>: Select a category from the available options.</li>
-</ol>
-<div>
-  <img src="https://github.com/xloyb/Quizia-Application/blob/main/images/9.jpg?raw=true" alt="Image 1" style="width: 100%; max-width: 200px; border-radius: 8px;" />
-</div>
-
-<hr>
-
-<ol start="2">
-  <li><strong>Start Quiz Button</strong>: Redirects to a page where users can:
-    <ul>
-      <li>Choose a category from a dropdown menu.</li>
-      <li>Play with a 15-second timer per question.</li>
+    <h3 class="text-2xl font-semibold mb-2">Homepage</h3>
+    <p class="mb-4">After successfully registering or logging in, users are redirected to the homepage. Here, users can view:</p>
+    <ul class="list-disc ml-6 mb-4">
+      <li><strong>Account Stats</strong>:
+        <ul class="list-inside list-disc">
+          <li>Total quizzes taken.</li>
+          <li>Last quiz score.</li>
+        </ul>
+      </li>
     </ul>
-  </li>
-</ol>
-<div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(150px, 1fr)); gap: 10px;">
-  <img src="https://github.com/xloyb/Quizia-Application/blob/main/images/8.jpg?raw=true" alt="Image 1" style="width: 100%; max-width: 200px; border-radius: 8px;" />
-</div>
+    <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-4">
+      <img src="https://github.com/xloyb/Quizia-Application/blob/main/images/7.jpg?raw=true" alt="Homepage" class="w-full max-w-xs rounded-lg"/>
+    </div>
 
-<p><strong>Gameplay Rules</strong>:</p>
-<ul>
-  <li>Questions are skipped if unanswered within the timer.</li>
-  <li>The game ends after three skips.</li>
-</ul>
-<div>
-  <img src="https://github.com/xloyb/Quizia-Application/blob/main/images/12.jpg?raw=true" alt="Image 1" style="width: 100%; max-width: 200px; border-radius: 8px;" />
-</div>
+    <p class="mb-4">The app also features a convenient navigation drawer.</p>
+    <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-4">
+      <img src="https://github.com/xloyb/Quizia-Application/blob/main/images/13.jpg?raw=true" alt="Navigation Drawer" class="w-full max-w-xs rounded-lg"/>
+    </div>
 
-<hr>
+    <hr class="my-4">
 
-<h3><strong>Profile</strong></h3>
-<p>The profile section allows users to:</p>
-<ul>
-  <li>Change their profile picture.</li>
-  <li>View account details.</li>
-</ul>
-<div>
-  <img src="https://github.com/xloyb/Quizia-Application/blob/main/images/14.jpg?raw=true" alt="Image 1" style="width: 100%; max-width: 200px; border-radius: 8px;" />
-</div>
+    <h3 class="text-2xl font-semibold mb-2">Quiz Features</h3>
+    <p class="mb-4">Users can start quizzes in two ways:</p>
+    <ol class="list-decimal ml-6 mb-4">
+      <li><strong>Category Selection</strong>: Select a category from the available options.</li>
+    </ol>
+    <div class="mb-4">
+      <img src="https://github.com/xloyb/Quizia-Application/blob/main/images/9.jpg?raw=true" alt="Image 1" class="w-full max-w-xs rounded-lg"/>
+    </div>
 
-<hr>
+    <hr class="my-4">
 
-<h3><strong>Settings</strong></h3>
-<p>The settings page offers several customization options:</p>
-<ul>
-  <li>Enable/disable Quizia notifications.</li>
-  <li>Toggle between light and dark themes.</li>
-  <li>Turn off in-game music.</li>
-  <li>Delete the account from the database.</li>
-</ul>
-<div>
-  <img src="https://github.com/xloyb/Quizia-Application/blob/main/images/15.jpg?raw=true" alt="Image 1" style="width: 100%; max-width: 200px; border-radius: 8px;" />
-</div>
+    <ol start="2" class="list-decimal ml-6 mb-4">
+      <li><strong>Start Quiz Button</strong>: Redirects to a page where users can:
+        <ul class="list-inside list-disc">
+          <li>Choose a category from a dropdown menu.</li>
+          <li>Play with a 15-second timer per question.</li>
+        </ul>
+      </li>
+    </ol>
+    <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-4">
+      <img src="https://github.com/xloyb/Quizia-Application/blob/main/images/8.jpg?raw=true" alt="Image 1" class="w-full max-w-xs rounded-lg"/>
+    </div>
 
-<hr>
+    <p class="mb-4"><strong>Gameplay Rules</strong>:</p>
+    <ul class="list-disc ml-6 mb-4">
+      <li>Questions are skipped if unanswered within the timer.</li>
+      <li>The game ends after three skips.</li>
+    </ul>
+    <div class="mb-4">
+      <img src="https://github.com/xloyb/Quizia-Application/blob/main/images/12.jpg?raw=true" alt="Image 1" class="w-full max-w-xs rounded-lg"/>
+    </div>
 
-<h3><strong>Leaderboard</strong></h3>
-<p>The leaderboard showcases the top 10 active players for the week, promoting competition and engagement.</p>
-<div>
-  <img src="https://github.com/xloyb/Quizia-Application/blob/main/images/16.jpg?raw=true" alt="Image 1" style="width: 100%; max-width: 200px; border-radius: 8px;" />
-</div>
+    <hr class="my-4">
 
-<hr>
+    <h3 class="text-2xl font-semibold mb-2">Profile</h3>
+    <p class="mb-4">The profile section allows users to:</p>
+    <ul class="list-disc ml-6 mb-4">
+      <li>Change their profile picture.</li>
+      <li>View account details.</li>
+    </ul>
+    <div class="mb-4">
+      <img src="https://github.com/xloyb/Quizia-Application/blob/main/images/14.jpg?raw=true" alt="Image 1" class="w-full max-w-xs rounded-lg"/>
+    </div>
 
-<p>Quizia offers an intuitive, feature-rich experience for quiz enthusiasts, blending fun, competition, and personalization.</p>
+    <hr class="my-4">
+
+    <h3 class="text-2xl font-semibold mb-2">Settings</h3>
+    <p class="mb-4">The settings page offers several customization options:</p>
+    <ul class="list-disc ml-6 mb-4">
+      <li>Enable/disable Quizia notifications.</li>
+      <li>Toggle between light and dark themes.</li>
+      <li>Turn off in-game music.</li>
+      <li>Delete the account from the database.</li>
+    </ul>
+    <div class="mb-4">
+      <img src="https://github.com/xloyb/Quizia-Application/blob/main/images/15.jpg?raw=true" alt="Image 1" class="w-full max-w-xs rounded-lg"/>
+    </div>
+
+    <hr class="my-4">
+
+    <h3 class="text-2xl font-semibold mb-2">Leaderboard</h3>
+    <p class="mb-4">The leaderboard showcases the top 10 active players for the week, promoting competition and engagement.</p>
+    <div class="mb-4">
+      <img src="https://github.com/xloyb/Quizia-Application/blob/main/images/16.jpg?raw=true" alt="Image 1" class="w-full max-w-xs rounded-lg"/>
+    </div>
+
+    <hr class="my-4">
+
+    <p>Quizia offers an intuitive, feature-rich experience for quiz enthusiasts, blending fun, competition, and personalization.</p>
+
+  </div>
+
+</body>
+</html>
